# Hydrogen

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flamegraph.sh  spec.txt  tmp.txt
docs/: README.md  config.toml
docs/content/: _index.md
docs/content/getting-started/: Architecture.md  _index.md  helloglfw.md  helloworld.md  installation.md
docs/layouts/partials/: logo.html
examples/advanced/: Build.yml  Hydrogen.yml  hy.yml
examples/advanced/docs/: Fetch.yml
examples/advanced/lib/openssl/: dep.yml  hy.py  hy.yml
examples/advanced/lib/sodium/: dep.yml  hy.py  hy.yml
examples/advanced/src/: hy.yml
examples/advanced/src/hello/: Build.yml  Hydrogen.yml  hello.c  hello.cpp
examples/advanced/src/hello/x/: Build.yml  Hydrogen.yml
examples/advanced/src/hola/: Build.yml  Hydrogen.yml  hola.c  hola.cpp
examples/advanced/src/libtest/: Build.yml  Hydrogen.yml  test.c
examples/basic/: Build.yml  Hydrogen.yml  hy.lua  hy.yml
examples/basic/src/: Build.yml  Hydrogen.yml  main.c  main.cpp
examples/basic/src/hello/: hy.yml
examples/basic/src/hola/: hy.yml  main.cpp
examples/basic/src/util/: add.h
src/: cli.rs  fetchfile.rs  hydrofile.rs  logging.rs  main.rs  meta.rs  policy.rs  project.rs
src/actual/: dependency.rs  mod.rs  project_dependency.rs
src/actual/real_actual/: mod.rs
src/actual/static_actual/: mod.rs
src/cats/: friends.txt  i_wuv_you.txt  mod.rs  thanks_for_fish.txt
src/fetchfile/: mod.rs
src/logging/: logging_file.rs  mod.rs
src/meta/: mod.rs  parse.rs
src/policy/policies/: basic.rs  style.rs
src/project/: check.rs  dep.rs  dependency.rs  error.rs  hy.rs  kinds.rs  layout.rs  mod.rs  parse.rs  project.rs  project_error.rs  py.rs  types.rs  version.rs
src/project/actual/: project_dependency.rs
src/project/actual/real_actual/: mod.rs
src/project/actual/static_actual/: mod.rs
src/project/meta/: mod.rs
src/util/: extension.rs  mod.rs  out.rs
