[package]
name = "hy"
version = "0.1.0"
authors = ["Milo Banks <plutoisaplanet4324@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    clap = "2.33.3" # TODO: Once Clap gets to a stable 3.0.0, upgrade
    structopt = "0.3.17"
    rayon = "1.4.0"
    exitcode = "1.1.2"
    log = "0.4.11"
    chrono = "0.4.15"
    flame = "0.2.2"

    fern = { version = "0.5.9", features = ["colored"] } # TODO: Once Fern 6.0.0 suports DateBased file logging, upgrade
