[package]
name = "hy"
version = "1.0.0"
license = "GPL-3.0"
repository = "https://github.com/Team-Zinc/Hydrogen"
keywords = ["build", "system", "c", "c++", "gcc", "awesome-stuff"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["Milo Banks <plutoisaplanet4324@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    clap = "2.33.3" # TODO: Once Clap gets to a stable 3.0.0, upgrade
    structopt = "0.3.17"
    rayon = "1.4.0"
    exitcode = "1.1.2"
    log = "0.4.11"
    chrono = "0.4.15"
    flame = "0.2.2"
    serde = { version = "1.0.115", features = ["derive"] }
    serde_yaml = "0.8"
    serde_json = "1.0.59"
    indicatif = "0.15.0"
    console = "0.12.0"
    dialoguer = "0.6.2"
    snafu = "0.6.9"
    inflections = "1.1.1"
    glob = "0.3.0"
    rand = "0.7.3"
    path-clean = "0.1.0"
    which = "4.0.2"
    
    command-run = { version = "*", default-features = false }
    fern = { version = "0.5.9", features = ["colored"] } # TODO: Once Fern 6.0.0 suports DateBased file logging, upgrade
